--- a/.config/i3/config.1
+++ b/.config/i3/config.1
@@ -35,7 +35,7 @@ client.background         #ffffff
 font pango:Hermit, Regular 8
 
 # title_align center
-hide_edge_borders horizontal
+hide_edge_borders both
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -66,31 +66,28 @@ bindsym $mod+Escape exec setxkbmap us
 
 # Defaults: {{{
 # Floating windows: {{{
-for_window   [instance="st_buffer"]         fullscreen   toggle
-
-for_window   [class="vlc"]                  floating     enable,   border   none
-for_window   [class="Pavucontrol"]          floating     enable,   border   none
-for_window   [class="Rhythmbox"]            floating     enable,   border   none
-for_window   [class="MEGAsync"]             floating     enable,   border   none
-for_window   [class="Gufw.py"]              floating     enable,   border   none
-for_window   [class="Wicd-client.py"]       floating     enable,   border   none
-for_window   [class="Gpick"]                floating     enable,   border   none
-for_window   [title="htop"]                 floating     enable,   border   none
-for_window   [instance="mus_term"]          floating     enable,   border   none
-for_window   [instance="update_term"]       floating     enable,   border   none
-for_window   [instance="float"]             floating     enable,   border   none
-for_window   [instance="calculator_term"]   floating     enable,   border   none
-
-
-for_window   [class="XClipboard"]          floating   enable,   move     position   center,   border   none
-for_window   [class="mpv"]                 floating   enable,   resize   set        500       400,     move     position   center,   border   none
-for_window   [class="Xfce4-taskmanager"]   floating   enable,   resize   set        500       400,     border   none
-for_window   [instance="floating_term"]    floating   enable,   resize   set        600       400,     border   none
+for_window [class="vlc"] floating enable 
+for_window [class="Pavucontrol"] floating enable
+for_window [class="Rhythmbox"] floating enable
+for_window [class="mpv"] floating enable, resize set 500 400, move position center
+for_window [class="Xfce4-taskmanager"] floating enable, resize set 500 400
+for_window [class="MEGAsync"] floating enable
+for_window [class="Gufw.py"] floating enable
+for_window [class="Wicd-client.py"] floating enable
+for_window [class="Gpick"] floating enable
+for_window [title="htop"] floating enable
+for_window [instance="floating_term"] floating enable, resize set 600 400
+for_window [instance="mus_term"] floating enable
+for_window [instance="update_term"] floating enable
+for_window [instance="float"] floating enable
+for_window [instance="calculator_term"] floating enable
+for_window [class="XClipboard"] floating enable, move position center
+for_window [instance="st_buffer"] fullscreen toggle
 
 # Scratchpad windows
-for_window   [class="XClipboard"]         move      scratchpad,   move   position   center
-for_window   [instance="mus_term"]        move      scratchpad,   mark   --add      m
-for_window   [instance="floating_term"]   move      scratchpad
+for_window [instance="mus_term"] move scratchpad, mark --add m
+for_window [instance="floating_term"] move scratchpad 
+for_window [class="XClipboard"] move scratchpad 
 
 # }}}
 
@@ -100,15 +97,7 @@ assign [class="Thunderbird"] 6
 assign [class="Lutris"] 5
 assign [class="Steam"] 5
 assign [class="Transmission-gtk"] 10
-assign [instance="ws-2"] 2
 assign [instance="ws-3"] 3
-assign [instance="ws-4"] 4
-assign [instance="ws-5"] 5
-assign [instance="ws-6"] 6
-assign [instance="ws-7"] 7
-assign [instance="ws-8"] 8
-assign [instance="ws-9"] 9
-assign [instance="ws-10"] 10
 assign [class="Navigator"] 2
 assign [class="Firefox"] 2
 # }}}
@@ -128,23 +117,19 @@ exec --no-startup-id synclient TouchpadOff=1
 exec --no-startup-id xclipboard
 exec --no-startup-id dunst
 exec --no-startup-id st -n ws-3
-exec --no-startup-id st -n ws-8 -e calcurse
-exec --no-startup-id st -n ws-8 -e bash -c "task && bash"
-exec --no-startup-id st -e bash -c "sudo apt update && bash"
 # exec --no-startup-id sxhkd 
 exec --no-startup-id i3-focus-last
-# Clock tick sound
-exec --no-startup-id wait-next-second && mpg123 --loop -1 ~/Sounds/tick.mp3
 
 # Redshift 
 exec --no-startup-id redshift -l 46.69:11.48 -t 5600:5000 -g 0.8 -m randr -v
 
+
+
 # set background
-exec_always ~/scripts/change-background.py -f ~/Pictures/wallpapers/tree_horizon_minimalism_128903_1366x768.jpg
-# exec_always ~/scripts/change-background.py
+exec_always ~/scripts/change-background.py
 
 
-exec_always ~/.config/polybar/launch.sh
+exec_always sleep 1 && ~/.config/polybar/launch.sh
 exec_always pkill sxhkd; sxhkd
 # }}}
 
